# Alzheimer

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
alzheimer/: __init__.py  dataset.py  features.py  plots.py
alzheimer/modeling/: predict.py  train.py
config/: FE.yaml  limpieza.yaml  logging.yaml  params.yaml  reportes.yaml
scripts/: carga_dataset.py  get_dataset.py  limpieza_dataset.py  padecimiento.py  realiza_EDA.py  realiza_prep.py
src/configuraciones/: config_params.py
src/datos/: EDA.py  clean_dataset.py  descarga_dataset.py  filtrar_padecimiento.py  preparacion.py
src/utils/: DirectoryManager.py  ReportePDF.py  datos.py  directory_manager.py  graficos.py  paths.py  reporte_PDF.py
