[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "alzheimer"
version = "0.0.1"
description = "Proyecto para predecir casos de Alzheimer en M\u00e9xico mediante modelos de aprendizaje autom\u00e1tico y an\u00e1lisis demogr\u00e1fico."
authors = [
  { name = "ITESM" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.14.0"


[tool.ruff]
line-length = 99
src = ["alzheimer"]
include = ["pyproject.toml", "alzheimer/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["alzheimer"]
force-sort-within-sections = true

